--- a/src/app/components/noticia/noticia.component.html
+++ b/src/app/components/noticia/noticia.component.html
@@ -1,7 +1,7 @@
-<ion-card>
+<ion-card class="animated fadeIn fast">
     <ion-card-header>
         <ion-card-subtitle>
-            <span class="text-primary">{{i + 1}}. </span>
+            <span class="text-primary">{{i + 1}}.</span>
             <span class="noticia-source-name">{{item.source.name}}</span>
 
 
@@ -13,7 +13,7 @@
         </ion-card-subtitle>
         <ion-card-title (click)="abrirNoticia()">{{item.title}}</ion-card-title>
     </ion-card-header>
-    <ion-img (click)="abrirNoticia()" *ngIf="item.urlToImage" [src]="item.urlToImage"></ion-img>
+    <ion-img (click)="abrirNoticia()" *ngIf="item.urlToImage" [src]="item.urlToImage" class="animated fadeIn fast"></ion-img>
     <ion-card-content>
         <p>
             {{item.description}}
